--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-modal": "^6.4.2",
     "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
